--- a/stepindex.htm
+++ b/stepindex.htm
@@ -31,7 +31,7 @@
                 <form id="signup_form" method="POST" action="https://flapp.venantech.com/stepup-signup" enctype='multipart/form-data'>
                     <div class="row">
                         <div class="col-md-5">
-                            <label for="add_remove">Do you wanna add, remove someone from stepup?</label>
+                            <label for="add_remove">Do you want to add or remove an employee from StepUp?</label>
                         </div>
                         <div class="col-md-1">
                             <div class="form-check">
