--- a/index.htm
+++ b/index.htm
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Step Up Sign Up</title>
-    <img src="https://www.unitedpetroleum.com.au/about/pieface/" alt="United Petroleum">
+    <img src="https://www.unitedpetroleum.com.au/about/pieface/pieface-united.jpg" alt="United Petroleum">
     <style>
         label{
             font-weight: bold;
@@ -97,7 +97,7 @@
                             <div class="row previous_site_row" style="display: none;">
                                 <div class="col-md-6">
                                     <div class="form-group">
-                                        <label for="username">What is the log in name?: *</label>
+                                        <label for="username">What is the login name?: *</label>
                                         <input type="text" name="username" id="username" class="form-control" value="" >
                                     </div>
                                 </div>
