--- a/index.htm
+++ b/index.htm
@@ -800,7 +800,7 @@
                                     <div class="form-group">
                                         <label for="current_site">Site location and No.</label>
                                         <select name="current_site" id="current_site" class="form-control" >
-                                            <option value="">Select a site</option>                                    
+                                            <option value="">Select a Site</option>                                    
                                                                                             <option value="Head Office">Head Office</option>
                                                                                             <option value="Other">Other</option>
                                                                                             <option value="2201 MINTO">2201 MINTO</option>
