--- a/index.htm
+++ b/index.htm
@@ -561,7 +561,7 @@
                             <div class="row">                  
                                 <div class="col-md-4">
                                     <div class="form-group">
-                                        <label for="first_name">First Name: *</label>
+                                        <label for="first_name">First Name:*</label>
                                         <input type="text" name="first_name" id="first_name" class="form-control" value="" >
                                     </div>
                                 </div>
@@ -573,7 +573,7 @@
                                 </div>
                                 <div class="col-md-4">
                                     <div class="form-group">
-                                        <label for="last_name">Last Name: *</label>
+                                        <label for="last_name">Last Name:*</label>
                                         <input type="text" name="last_name" id="last_name" class="form-control" value="" >
                                     </div>
                                 </div>
@@ -581,7 +581,7 @@
                             <div class="row">
                                 <div class="col-md-6">
                                     <div class="form-group">
-                                        <label for="gender">Gender: *</label>
+                                        <label for="gender">Gender:*</label>
                                         <select name="gender" id="gender" class="form-control" >
                                             <option value="">Select a gender</option>                                    
                                             <option value="Male">Male</option>
@@ -591,7 +591,7 @@
                                 </div>
                                 <div class="col-md-6">
                                     <div class="form-group">
-                                        <label for="nationality">Nationality: *</label>
+                                        <label for="nationality">Nationality:*</label>
                                         <select name="nationality" id="nationality" class="form-control" >
                                             <option value="">Select a nationality</option>                                    
                                                                                             <option value="Afghanistan">Afghanistan</option>
@@ -1278,7 +1278,7 @@
                                 </div>
                                 <div class="col-md-6 training_day_col" style="display: none;" >
                                     <div class="form-group">
-                                        <label for="training_day">Training day: *</label>
+                                        <label for="training_day">Training Day: *</label>
                                         <select name="training_day" id="training_day" class="form-control" >
                                             <option value="">Select a Training Day</option>                                    
                                                                                             <option value="Monday - 25-Jan-21 (35 Seats available)">Monday - 25-Jan-21 (35 Seats available)</option>
