--- a/index.htm
+++ b/index.htm
@@ -1332,6 +1332,8 @@
                                         <p style="margin: 0;"><b>Note:</b></p>
                                         <ul>
                                             <li>You can take this picture with your own mobile phone.</li>
+						
+					    <li>Please use the below image as a reference:</li>
                                         </ul>
                                     </div>
                                 </div>
