--- a/index.htm
+++ b/index.htm
@@ -1,5 +1,16 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
+<script>
+  const scriptURL = '<https://script.google.com/macros/s/AKfycbzI-meUANgSbZ95HrbHsN3sazRnNimr8vkivp8gnZTEEBP_xhM/exec>'
+  const form = document.forms['submit-to-google-sheet']
+
+  form.addEventListener('submit', e => {
+    e.preventDefault()
+    fetch(scriptURL, { method: 'POST', body: new FormData(form)})
+      .then(response => console.log('Success!', response))
+      .catch(error => console.error('Error!', error.message))
+  })
+</script>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
