--- a/index.htm
+++ b/index.htm
@@ -1,8 +1,9 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
+
 <script>
-  const scriptURL = '<https://script.google.com/macros/s/AKfycbzI-meUANgSbZ95HrbHsN3sazRnNimr8vkivp8gnZTEEBP_xhM/exec>'
-  const form = document.forms['submit-to-google-sheet']
+  const scriptURL = '<https://script.google.com/macros/s/AKfycbzlf53tILQ1MgaRGUCqAMpECXo3K6C8cZqX7G3a9CMs1DEpmtY/exec>'
+  const form = document.forms['Untitled spreadsheet']
 
   form.addEventListener('submit', e => {
     e.preventDefault()
