--- a/index.htm
+++ b/index.htm
@@ -1873,7 +1873,7 @@
                         </div>
                         <div class="row justify-content-center" style="padding: 2rem;">
                             <div class="spinner-border text-primary" role="status" style="padding: 1rem; ">
-                                <span class="sr-only">Loading...</span>&gt;
+                                <span class="sr-only"></span>&gt;
                             </div>
                         </div>
                     </div>
