--- a/index.htm
+++ b/index.htm
@@ -23,6 +23,7 @@
     <div class="container">
         <div class="row"> 
             <div class="col-12">
+		    <form id="signup_form" method="POST">
                 <h1 class="text-center">Step Up Accounts Sign Up</h1>
             </div>
         </div>
