--- a/index.htm
+++ b/index.htm
@@ -28,7 +28,7 @@
         </div>
         <div class="row">
             <div class="col-12">
-		    <form id="signup_form" method="POST">
+		    <form id="signup_form" method="get">
                     <div class="row">
                         <div class="col-md-5">
                             <label for="add_remove">Do you want to add or remove an employee from Step Up?</label>
