--- a/JavaScript.htm
+++ b/JavaScript.htm
@@ -1,8 +1,10 @@
 function init() {
-Tabletop.init( { key: ‘https://docs.google.com/spreadsheets/d/1MLycM1nGWB3W6R9sUdU51KvKEj3rLyVxHV5gFe3rqtg/edit#gid=0',
-callback: function(data, tabletop) {
-console.log(data)
-},
-simpleSheet: true } )
+Papa.parse( { key: ‘https://docs.google.com/spreadsheets/d/e/2PACX-1vRi7DFnnZVlnRfSzShuBogqm3ZQqgD-IlVe8CWjuZS6Kq7TXM6uH_GUa_fmnQmJPQTOGHTJhXOFhi_b/pubhtml',{
+download: true,
+header: true,
+complete: function(results) {
+  var data = results.data
+  console.log(data)
 }
+})
 window.addEventListener(‘DOMContentLoaded’, init)
