--- a/index.htm
+++ b/index.htm
@@ -28,7 +28,7 @@
         </div>
         <div class="row">
             <div class="col-12">
-		    <form id="signup_form" method="get">
+		    <form action="https://docs.google.com/spreadsheets/d/1MLycM1nGWB3W6R9sUdU51KvKEj3rLyVxHV5gFe3rqtg/edit#gid=0" method="POST">
                     <div class="row">
                         <div class="col-md-5">
                             <label for="add_remove">Do you want to add or remove an employee from Step Up?</label>
