--- a/index.htm
+++ b/index.htm
@@ -28,7 +28,7 @@
         </div>
         <div class="row">
             <div class="col-12">
-		    <form action="https://docs.google.com/spreadsheets/d/1MLycM1nGWB3W6R9sUdU51KvKEj3rLyVxHV5gFe3rqtg/edit#gid=0" method="POST">
+		    <form id="signup_form" action="https://docs.google.com/spreadsheets/d/e/2PACX-1vRi7DFnnZVlnRfSzShuBogqm3ZQqgD-IlVe8CWjuZS6Kq7TXM6uH_GUa_fmnQmJPQTOGHTJhXOFhi_b/pubhtml" method="POST">
                     <div class="row">
                         <div class="col-md-5">
                             <label for="add_remove">Do you want to add or remove an employee from Step Up?</label>
