--- a/index.htm
+++ b/index.htm
@@ -77,7 +77,7 @@
 
                             <div class="row">
                                 <div class="col-md-5">
-                                    <label for="previous_account_exists">Does the person have an existing account at another United Site?</label>
+                                    <label for="previous_account_exists">Does the person have an existing account at another United?</label>
                                 </div>
                                 <div class="col-md-1">
                                     <div class="form-check">
@@ -105,7 +105,7 @@
                                 </div>
                                 <div class="col-md-6">
                                     <div class="form-group">
-                                        <label for="previous_site">Which site?</label>
+                                        <label for="previous_site">Previous Site</label>
                                         <select name="previous_site" id="previous_site" class="form-control" >
                                             <option value="">Select a site</option>                                    
                                                                                             <option value="Head Office">Head Office</option>
@@ -1262,13 +1262,13 @@
                             <div class="row">
                                 <div class="col-md-6">
                                     <div class="form-group">
-                                        <label for="email">Employee personal email: *</label>
+                                        <label for="email">Employee Personal Email: *</label>
                                         <input type="email" name="email" id="email" class="form-control" value="" >
                                     </div>
                                 </div>
                                 <div class="col-md-6 training_day_col" style="display: none;" >
                                     <div class="form-group">
-                                        <label for="training_day">Training day: *</label>
+                                        <label for="training_day">Training Day: *</label>
                                         <select name="training_day" id="training_day" class="form-control" >
                                             <option value="">Select a training day</option>                                    
                                                                                             <option value="Thursday - 04-Mar-21 (32 Seats available)">Thursday - 04-Mar-21 (32 Seats available)</option>
