--- a/index.htm
+++ b/index.htm
@@ -578,7 +578,8 @@
                                 <div class="col-md-6">
                                     <div class="form-group">
                                         <label for="gender">Which of the following most accurately describe you?: *</label>
-                                        <select name="gender" id="gender" class="form-control" >                                   
+                                        <select name="gender" id="gender" class="form-control" >  
+                                            <option value="">Select</option>
                                             <option value="Female">Female</option>
                                             <option value="Male">Male</option>
                                             <option value="Non-binary">Non-binary</option>
