--- a/index.htm
+++ b/index.htm
@@ -577,7 +577,7 @@
                             <div class="row">
                                 <div class="col-md-6">
                                     <div class="form-group">
-                                        <label for="gender">Which of the following most accurately describe you?: *</label>
+                                        <label for="gender">Which of the following most accurately describe you? *</label>
                                         <select name="gender" id="gender" class="form-control" >  
                                             <option value="">Select</option>
                                             <option value="Female">Female</option>
