--- a/index.htm
+++ b/index.htm
@@ -54,7 +54,7 @@
                     <div class="add_form" style="display: none;">
                         <div class="row">
                             <div class="col-md-5">
-                                <label for="site_type">Is your site United/Pie Face, United Petroleum Only or a Dealer Site?</label>
+                                <label for="site_type">Is your site United/Pie Face, United Petroleum Only or a Dealer?</label>
                             </div>
                             <div class="col-md-2">
                                 <div class="form-check">
