--- a/index.htm
+++ b/index.htm
@@ -71,7 +71,8 @@
                                         United Petroleum
                                     </label>
                                 </div>
-                                <div class="col-md-2">
+                            </div>
+                            <div class="col-md-2">
                                 <div class="form-check">
                                     <input class="form-check-input" type="radio" name="site_type" id="site_type3" value="Dealer">
                                     <label class="form-check-label" for="site_type3">
