--- a/index.htm
+++ b/index.htm
@@ -72,6 +72,14 @@
                                     </label>
                                 </div>
                             </div>
+                            <div class="col-md-2">
+                                <div class="form-check">
+                                    <input class="form-check-input" type="radio" name="site_type" id="site_type3" value="Dealer">
+                                    <label class="form-check-label" for="site_type3">
+                                        Dealer
+                                    </label>
+                                </div>                           
+                            </div>     
                         </div>
                         <div class="child_add_form" style="display: none;">
 
