--- a/index.htm
+++ b/index.htm
@@ -31,7 +31,7 @@
                 <form id="signup_form" method="POST" action="https://flapp.venantech.com/stepup-signup" enctype='multipart/form-data'>
                     <div class="row">
                         <div class="col-md-5">
-                            <label for="add_remove">Do you wanna add, remove someone from stepup?</label>
+                            <label for="add_remove">Would you like to add or remove an employee on Step Up?</label>
                         </div>
                         <div class="col-md-1">
                             <div class="form-check">
