--- a/index.htm
+++ b/index.htm
@@ -54,7 +54,7 @@
                     <div class="add_form" style="display: none;">
                         <div class="row">
                             <div class="col-md-5">
-                                <label for="site_type">Is your site United/Pie Face or United Petroleum only?</label>
+                                <label for="site_type">Is your site United/Pie Face, United Petroleum Only or a Dealer?</label>
                             </div>
                             <div class="col-md-2">
                                 <div class="form-check">
@@ -72,9 +72,17 @@
                                     </label>
                                 </div>
                             </div>
+                            <div class="col-md-2">
+                                <div class="form-check">
+                                    <input class="form-check-input" type="radio" name="site_type" id="site_type3" value="Dealer">
+                                    <label class="form-check-label" for="site_type3">
+                                        Dealer
+                                    </label>
+                                </div>                           
+                            </div>     
                         </div>
                         <div class="child_add_form" style="display: none;">
-
+                            
                             <div class="row">
                                 <div class="col-md-5">
                                     <label for="previous_account_exists">Does the person have an account at another United Site?</label>
