--- a/index.htm
+++ b/index.htm
@@ -585,11 +585,14 @@
                             <div class="row">
                                 <div class="col-md-6">
                                     <div class="form-group">
-                                        <label for="gender">Gender: *</label>
+                                        <label for="gender">Which of the following most accurately describe you? *</label>
                                         <select name="gender" id="gender" class="form-control" >
-                                            <option value="">Select a gender</option>                                    
-                                            <option value="Male">Male</option>
+                                            <option value="">Select</option>
                                             <option value="Female">Female</option>
+                                            <option value="Male">Male</option>
+                                            <option value="Non-binary">Non-binary</option>
+                                            <option value="Transgender">Transgender</option>
+                                            <option value="Prefer not to say">Prefer not to say</option>
                                         </select>                                
                                     </div>
                                 </div>
