--- a/index.htm
+++ b/index.htm
@@ -1333,8 +1333,8 @@
                                         <input type="file" name="photo_id" id="photo_id" class="form-control" value="" >
                                         <p style="margin: 0;"><b>Note:</b></p>
                                         <ul>
-                                            <li>You can take this picture with your own Mobile phone, ensuring that the photo has good light.</li>
-                                            <li>Please avoid glasses.</li>
+                                            <li>You can take this picture with your own mobile phone</li>
+                                            <li>Please use the image as a reference</li>
                                         </ul>
                                     </div>
                                 </div>
