--- a/index.htm
+++ b/index.htm
@@ -107,7 +107,7 @@
                             <div class="row previous_site_row" style="display: none;">
                                 <div class="col-md-6">
                                     <div class="form-group">
-                                        <label for="username">What is the log in name?: *</label>
+                                        <label for="username">Previous Username *</label>
                                         <input type="text" name="username" id="username" class="form-control" value="" >
                                     </div>
                                 </div>
