--- a/index.htm
+++ b/index.htm
@@ -107,13 +107,13 @@
                             <div class="row previous_site_row" style="display: none;">
                                 <div class="col-md-6">
                                     <div class="form-group">
-                                        <label for="username">Previous Username *</label>
+                                        <label for="username">What is the username? *</label>
                                         <input type="text" name="username" id="username" class="form-control" value="" >
                                     </div>
                                 </div>
                                 <div class="col-md-6">
                                     <div class="form-group">
-                                        <label for="previous_site">Which site?</label>
+                                        <label for="previous_site">Previous Site</label>
                                         <select name="previous_site" id="previous_site" class="form-control" >
                                             <option value="">Select a site</option>                                    
                                                                                             <option value="Head Office">Head Office</option>
