--- a/index.htm
+++ b/index.htm
@@ -1819,7 +1819,7 @@
                         <div class="row">
                             <div class="col-md-6">
                                 <div class="form-group">
-                                    <label for="remove_email">Employee to be removed email: *</label>
+                                    <label for="remove_email">Employee Email: *</label>
                                     <input type="email" name="remove_email" id="remove_email" class="form-control" value="" >
                                 </div>
                             </div>
