--- a/index.htm
+++ b/index.htm
@@ -85,7 +85,7 @@
                             
                             <div class="row">
                                 <div class="col-md-5">
-                                    <label for="previous_account_exists">Does the person have an account at another United Site?</label>
+                                    <label for="previous_account_exists">Does the person have an account at another United?</label>
                                 </div>
                                 <div class="col-md-1">
                                     <div class="form-check">
