--- a/index.htm
+++ b/index.htm
@@ -1339,7 +1339,7 @@
                                     </div>
                                 </div>
                                 <div class="col-md-6 text-center">
-                                    <img src="img/passport_size_photo.jpeg" alt="Passport size photo" style="width: 100%; max-width: 15rem;" class="img-responsive">
+                                    <img src="https://www.google.com/imgres?imgurl=https%3A%2F%2Ftravel.state.gov%2Fcontent%2Ftravel%2Fen%2Fus-visas%2Fvisa-information-resources%2Fphotos%2Fphoto-composition-template%2F_jcr_content%2Ftsg-rwd-content-page-parsysxxx%2Fimage.img.jpg%2F1595428938021.jpg&imgrefurl=https%3A%2F%2Ftravel.state.gov%2Fcontent%2Ftravel%2Fen%2Fus-visas%2Fvisa-information-resources%2Fphotos%2Fphoto-composition-template.html&tbnid=uAnREglfBWxkKM&vet=12ahUKEwiuyPGztZDvAhVIErcAHT27CmYQMygAegUIARCkAQ..i&docid=DEcPny_m2jv3BM&w=418&h=188&q=passport%20size%20photo%20diagram&ved=2ahUKEwiuyPGztZDvAhVIErcAHT27CmYQMygAegUIARCkAQ">
                                 </div>
 
                             </div>
