--- a/index.htm
+++ b/index.htm
@@ -1273,7 +1273,7 @@
                             <div class="row">
                                 <div class="col-md-6">
                                     <div class="form-group">
-                                        <label for="email">Employee personal email: *</label>
+                                        <label for="email">Employee Personal Email: *</label>
                                         <input type="email" name="email" id="email" class="form-control" value="" >
                                     </div>
                                 </div>
