--- a/index.htm
+++ b/index.htm
@@ -1317,7 +1317,7 @@
                                 </div>
                                 <div class="col-md-6 id_card_col" style="display: none;">
                                     <div class="form-group">
-                                        <label for="id_card">ID card Passport/Drivers License: *</label>
+                                        <label for="id_card">ID: Passport/Drivers Licence *</label>
                                         <input type="file" name="id_card" id="id_card" class="form-control" value="" >
                                     </div>
                                 </div>
