--- a/index.htm
+++ b/index.htm
@@ -1825,7 +1825,7 @@
                             </div>
                             <div class="col-md-6">
                                 <div class="form-group">
-                                    <label for="remove_mobile_number">Employee Mobile Phone No.: *</label>
+                                    <label for="remove_mobile_number">Employee Mobile Phone No. *</label>
                                     <input type="text" name="remove_mobile_number" id="remove_mobile_number" class="form-control" value="" >
                                 </div>
                             </div>
