--- a/index.htm
+++ b/index.htm
@@ -1317,7 +1317,7 @@
                                 </div>
                                 <div class="col-md-6 id_card_col" style="display: none;">
                                     <div class="form-group">
-                                        <label for="id_card">ID: Passport/Drivers Licence *</label>
+                                        <label for="id_card">ID: Passport/Driver's Licence *</label>
                                         <input type="file" name="id_card" id="id_card" class="form-control" value="" >
                                     </div>
                                 </div>
@@ -1339,7 +1339,7 @@
                                     </div>
                                 </div>
                                 <div class="col-md-6 text-center">
-                                    <img src="https://www.google.com/imgres?imgurl=https%3A%2F%2Ftravel.state.gov%2Fcontent%2Ftravel%2Fen%2Fus-visas%2Fvisa-information-resources%2Fphotos%2Fphoto-composition-template%2F_jcr_content%2Ftsg-rwd-content-page-parsysxxx%2Fimage.img.jpg%2F1595428938021.jpg&imgrefurl=https%3A%2F%2Ftravel.state.gov%2Fcontent%2Ftravel%2Fen%2Fus-visas%2Fvisa-information-resources%2Fphotos%2Fphoto-composition-template.html&tbnid=uAnREglfBWxkKM&vet=12ahUKEwiuyPGztZDvAhVIErcAHT27CmYQMygAegUIARCkAQ..i&docid=DEcPny_m2jv3BM&w=418&h=188&q=passport%20size%20photo%20diagram&ved=2ahUKEwiuyPGztZDvAhVIErcAHT27CmYQMygAegUIARCkAQ">
+                                    <img src="https://www.google.com/imgres?imgurl=https%3A%2F%2Fi2.wp.com%2Ftravel.state.gov%2Fcontent%2Ftravel%2Fen%2Fus-visas%2Fvisa-information-resources%2Fphotos%2Fphoto-composition-template%2F_jcr_content%2Ftsg-rwd-content-page-parsysxxx%2Fimage.img.jpg%2F1595428938021.jpg&imgrefurl=https%3A%2F%2Fmytheperfect.onrender.com%2Fpassport-size-photo-size-in-pixels-online.html&tbnid=spNOYnaHEvyZiM&vet=12ahUKEwiNjqzzt5DvAhWNBLcAHfNBC4kQMygAegQIARAg..i&docid=Tu7LfULyCvDMkM&w=418&h=188&q=passport%20photo%20template&ved=2ahUKEwiNjqzzt5DvAhWNBLcAHfNBC4kQMygAegQIARAg" alt PP>
                                 </div>
 
                             </div>
