--- a/index.htm
+++ b/index.htm
@@ -1317,7 +1317,7 @@
                                 </div>
                                 <div class="col-md-6 id_card_col" style="display: none;">
                                     <div class="form-group">
-                                        <label for="id_card">ID: Passport/Driver's Licence *</label>
+                                        <label for="id_card">ID: Passport/Driver Licence *</label>
                                         <input type="file" name="id_card" id="id_card" class="form-control" value="" >
                                     </div>
                                 </div>
@@ -1329,7 +1329,7 @@
                                 </div>
                                 <div class="col-md-6">
                                     <div class="form-group">
-                                        <label for="photo_id">Select Passport size photo: *</label>
+                                        <label for="photo_id">Select passport size photo: *</label>
                                         <input type="file" name="photo_id" id="photo_id" class="form-control" value="" >
                                         <p style="margin: 0;"><b>Note:</b></p>
                                         <ul>
