--- a/index.htm
+++ b/index.htm
@@ -1335,6 +1335,7 @@
                                         <ul>
                                             <li>You can take this picture with your own mobile phone</li>
                                             <li>Please use the image as a reference</li>
+                                            <li>This will be used for your United/Pie Face ID card</li>
                                         </ul>
                                     </div>
                                 </div>
