--- a/index.htm
+++ b/index.htm
@@ -1279,7 +1279,7 @@
                                 </div>
                                 <div class="col-md-6 training_day_col" style="display: none;" >
                                     <div class="form-group">
-                                        <label for="training_day">Training day: *</label>
+                                        <label for="training_day">Training Day: *</label>
                                         <select name="training_day" id="training_day" class="form-control" >
                                             <option value="">Select a training day</option>                                    
                                                                                             <option value="Thursday - 04-Mar-21 (32 Seats available)">Thursday - 04-Mar-21 (32 Seats available)</option>
@@ -1292,13 +1292,13 @@
                             <div class="row">
                                 <div class="col-md-6">
                                     <div class="form-group">
-                                        <label for="site_phone">Site Phone No.: *</label>
+                                        <label for="site_phone">Site Phone No. *</label>
                                         <input type="text" name="site_phone" id="site_phone" class="form-control" value="" >
                                     </div>
                                 </div>
                                 <div class="col-md-6">
                                     <div class="form-group">
-                                        <label for="mobile_number">Employee Mobile Phone No.: *</label>
+                                        <label for="mobile_number">Employee Mobile Phone No. *</label>
                                         <input type="text" name="mobile_number" id="mobile_number" class="form-control" value="" >
                                     </div>
                                 </div>
